removed registration link

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
                         <div class="header-text">
                             <div class="wow fadeInUp upper latter-space" data-wow-delay="0.2s">DevOps Academy - Community Learning</div>
-                            <h2 class="header-title wow fadeInUp upper" data-wow-delay="0.4s">Coming up Feb 2020</h2>
+                            <h2 class="header-title wow fadeInUp upper" data-wow-delay="0.4s">Registrations for Feb 2020 are closed</h2>
 
-                            <div class="wow fadeInUp" data-wow-delay="0.7s">
+                            <!-- <div class="wow fadeInUp" data-wow-delay="0.7s"> -->
                                 <!-- <a href="https://forms.gle/vVmCAYwXnrhmHRs39" class="bttn bttn-lg bttn-primary" target="_blank">Register Now - opened until 30/11</a> -->
-                                <a href="https://forms.gle/vVmCAYwXnrhmHRs39" class="bttn bttn-lg bttn-primary" target="_blank">Register Now</a>
-                            </div>
-                            <div class="wow fadeInUp upper latter-space" style="margin-top: 10px;" data-wow-delay="0.9s">Registration opened until 30/11/2019</div>
+                                <!-- <a href="https://forms.gle/vVmCAYwXnrhmHRs39" class="bttn bttn-lg bttn-primary" target="_blank">Registrations Closed</a> -->
+                            <!-- </div> -->
+                            <!-- <div class="wow fadeInUp upper latter-space" style="margin-top: 10px;" data-wow-delay="0.9s">Registration opened until 30/11/2019</div> -->
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="wow fadeInUp" data-wow-delay="0.7s">
-                        <a href="https://github.com/itbraustralia/devopsacademy" class="bttn bttn-primary" target="_blank">Learn More</a>
+                        <a href="https://github.com/devopsacademyau/academy" class="bttn bttn-primary" target="_blank">Learn More</a>
                     </div>
                 </div>
                 <div class="hidden-xs col-sm-6 col-md-offset-1">
