--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                             <h2 class="header-title wow fadeInUp upper" data-wow-delay="0.4s">Registrations for Feb 2020 are closed</h2>
 
                             <!-- <div class="wow fadeInUp" data-wow-delay="0.7s"> -->
-                                <!-- <a href="https://forms.gle/vVmCAYwXnrhmHRs39" class="bttn bttn-lg bttn-primary" target="_blank">Register Now - opened until 30/11</a> -->
-                                <!-- <a href="https://forms.gle/vVmCAYwXnrhmHRs39" class="bttn bttn-lg bttn-primary" target="_blank">Registrations Closed</a> -->
+                                <!-- <a href="" class="bttn bttn-lg bttn-primary" target="_blank">Register Now - opened until 30/11</a> -->
+                                <!-- <a href="" class="bttn bttn-lg bttn-primary" target="_blank">Registrations Closed</a> -->
                             <!-- </div> -->
                             <!-- <div class="wow fadeInUp upper latter-space" style="margin-top: 10px;" data-wow-delay="0.9s">Registration opened until 30/11/2019</div> -->
                         </div>
